emulator/tests/snapshots/diagnostics__missing_register_name.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 87
expression: "check_parse_errors(\"    ld %, %a\")"
---
error: unexpected ',', expected something else
  ┌─ test.S:1:9
  │
1 │     ld %, %a
  │         ^ unexpected ',', expected something else
